# haplomap

./: .gitignore  .travis.yml  CMakeLists.txt  CMakeLists.txt.in  LICENSE  Makefile  MakefileOLD  README.md  config.yaml  ehaploblocks.cpp  environment.yaml  haplomap.smk  quantTraitMap.cpp  slurm.submit.sh  test.sh
.github/workflows/: build.yaml
HBCGM_MPD/: Derivation of the formula for permutation.docx  bestPossiblePvalue.docx  formula_forStrainEffect.docx  mouse_strains_annotation.csv
app/: README.md  helpers.py  main.py  theme.yaml
app/static/css/: custom.min.css
app/templates/: index.html  styles.css
cgi-bin/: SNPView.pl  thaplomap.2020.pl
conda/: build.sh
docs/: EMMA_for_HBCGM.docx  mouse_strains_annotation.csv  mpd2mesh.csv  strains.metadata.csv
example/: 31850-GLU-M_results.peltzlab.txt  MPD_MeSH.example.txt  MPD_MeSH.txt  MPD_MeSH_suffixed.txt  haplomap.solo.smk  mouse54_grm.rel  mpd2mesh.json  mus.compact.exprs.txt  test.strain.txt  test.trait.txt  trait.example.txt
example/PeltzData/: 10807-hc_length-M.results.txt  MPD_10806.results.mesh.pmids.txt  MPD_10806.results.mesh.txt  MPD_10807.results.mesh.pmids.txt  MPD_10807.results.mesh.txt  MPD_10813.results.mesh.pmids.txt  MPD_10813.results.mesh.txt  MPD_1501-f_anthrax_lethal_toxin.results.mesh.txt  MPD_26721.results.mesh.txt  MPD_31850-GLU-M.results.mesh.txt  MPD_50243.results.mesh.pmids.txt  MPD_50243.results.mesh.txt  MPD_9904.results.mesh.txt  MPD_Cocaine.results.mesh.txt  MPD_Haloperidol.results.mesh.txt  MPD_irinotecan.results.mesh.pmids.txt  MPD_irinotecan.results.mesh.txt
haplomap/: CHANGELOG.md  CMakeLists.txt  README.md  cmd_eblocks.cpp  cmd_ghmap.cpp  ehaploblocks.cpp  main.cpp  quantTraitMap.cpp
haplomap/include/: ColumnReader.h  argsort.h  constants.h  dynum.h  eblocks.h  eigen.h  fdr.h  ghmap.h  glob.h  haploLib.h  haplolib.h  haplomap.h  hash_string.h  indexcomparator.h  linalg.h  manova.h  mat.h  ols.h  stats.h  util.h  utils.h  vcf.h  vcfparser.h  vep.h
haplomap/src/: ColumnReader.cpp  annotate.cpp  anova.cpp  argsort.cpp  constants.cpp  convert.cpp  eblocks.cpp  ehaploblocks.cpp  eigen.cpp  ghmap.cpp  glob.cpp  haploLib.cpp  haplolib.cpp  linalg.cpp  manova.cpp  niehs.cpp  ols.cpp  pca.cpp  quantTraitMap.cpp  stats.cpp  utils.cpp  vcf.cpp  vcfparser.cpp  vep.cpp
include/: ColumnReader.h  dynum.h  haploLib.h  hash_string.h  indexcomparator.h  util.h
scripts/: addSuffix.py  annotateINDEL.py  annotateSNPs.py  annotateSV.py  downloadResults.pl  jsd.py  pvalAndEffect.r  showgeneblocks.pl  strain2traits.py  thaplomap.2020.pl  thaplomap.pl  vcf2NIEHS.py
scripts/SNP_process/: get_gene_SNP_coverage.pl  get_gene_SNP_coverage.pl~  map_SNP_to_gene.pl  map_SNP_to_gene.pl~  temp.txt
scripts/SNP_process/NIEHS/: get_SNP_gene_codon.pl  get_SNP_gene_codon.pl~  process_data.pl  process_data.pl~
scripts/SNP_process/SNP_annotation/: Note for SNP codon table construction.doc  R_code_allGeneCount.txt  bad_gene_info_withCAST_v58.txt  codon_change_allSanger_v58.txt  codon_change_v58.txt  codon_change_withCAST_v58.txt  compare_codon.pl  compare_codon.pl~  gene_info_allSanger_v58.txt  gene_info_allSangerv58.txt  getAnnotation.pl~  getAnnotation_backup1.pl  getAnnotation_oldVersion.pl  temp.txt  unique_genes_v58.csv
scripts/SNP_process/genetic_dist/: dist_NIEHS.txt  dist_NIH.txt  dist_combined.txt  dist_sanger.txt  get_genetic_dist.pl  get_genetic_dist.pl~  get_genetic_dist_NIH.pl  get_genetic_dist_NIH.pl~  get_genetic_dist_old.pl  kinship_matrix_combined.txt  temp.txt
scripts/SNP_process/sanger/: process_data.pl  process_data.pl~
scripts/SNP_process/toCompactFormat/: convertToCompactFormat.pl  convertToCompactFormat.pl~
scripts/common/: doPhenotypes.pl  maxEffect.pl  showblockSNPs.pl  showgeneblocks.2020.pl  thaplomap.pl  viewSNPs.pl
scripts/gene_annotation/: README.md  annovar_pipe_hbcgm  merge_ANNOVAR_result_by_strain.py  merge_two_annovar_outputs.py  mm10_regdoms  parse_annovar_result.py  remove_unfit_transcripts.py
scripts/inhouse_tools/: ._combine_wildDerived.pl  ._convert_GATK_result_to_NIEHS_format.pl  combine_wildDerived.pl  combine_wildDerived.pl~  convert_GATK_result_to_NIEHS_format.pl  convert_GATK_result_to_NIEHS_format.pl~  convert_mpileup_result_to_NIEHS_format.pl  convert_mpileup_result_to_NIEHS_format.pl~
src/: ColumnReader.cpp  haploLib.cpp  util.cpp
test/: CMakeLists.txt  example.cpp  ghmap.test.cpp  unitest.cpp  utils.test.cpp
webapp/: README.md  helpers.py  main.py
webserver/: countStrains.pl  discardIfOld.pl  getAnnotation.pl  showblocks.pl  sortblocks.pl
workflows/: README.md  align.recal.smk  bcftools.call.smk  config.2.yaml  config.indel.yaml  config.yaml  gatk.call-2.smk  gatk.call.single-gvcf.smk  gatk.call.smk  haplomap.indel.smk  haplomap.smk  haplomap.solo.smk  slurm_config.yaml  smk.help.txt  vep.smk
